--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <div class="contents">
                 <h3 class="section-title">アンケート内容</h3>
                 <div class="contents-item">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSei0fGiVTQz_VmotExZruDe919RAIcYNXkk9reQHMqkWEZsig/viewform?embedded=true" width="640" height="628" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSei0fGiVTQz_VmotExZruDe919RAIcYNXkk9reQHMqkWEZsig/viewform?embedded=true" width=50% height="628" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
                 </div>
 
                 <div class="contents-item">
-                    <a class="twitter-timeline" href="https://twitter.com/kishida230?ref_src=twsrc%5Etfw" width="640" height="628" frameborder="0" marginheight="0" marginwidth="0">Tweets by kishida230</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <a class="twitter-timeline" href="https://twitter.com/kishida230?ref_src=twsrc%5Etfw" width=50% height="628" frameborder="0" marginheight="0" marginwidth="0">Tweets by kishida230</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     <!--<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">スタッフからお知らせです。<br>菅義偉がテレビ番組に出演します。<br><br>日時：10月2日(日)7時30分〜8時55分<br>番組：フジテレビ「日曜報道 THE PRIME」<br><br>ぜひご覧ください。<br><br>菅義偉事務所<a href="https://t.co/vmV4X8V1tl">https://t.co/vmV4X8V1tl</a></p>&mdash; 菅 義偉 (@sugawitter) <a href="https://twitter.com/sugawitter/status/1576040018191470593?ref_src=twsrc%5Etfw">October 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
                 </div>
 
