--- a/anke2/anke_18_20.html
+++ b/anke2/anke_18_20.html
@@ -12,16 +12,16 @@
                 <div class="header-logo">アンケート681~720</div>
                 <div class="header-list">
                     <ul>
-                        <a href="./anke2/anke_1.html">アンケート1~100</a>
-                        <a href="./anke2/anke_2.html">アンケート101~200</a>
-                        <a href="./anke2/anke_3.html">アンケート201~300</a>
-                        <a href="./anke2/anke_4.html">アンケート301~400</a>
-                        <a href="./anke2/anke_5.html">アンケート401~500</a>
-                        <a href="./anke2/anke_6.html">アンケート501~600</a>
-                        <a href="./anke2/anke_7.html">アンケート601~700</a>
-                        <a href="./anke2/anke_8.html">アンケート701~800</a>
-                        <a href="./anke2/anke_9.html">アンケート801~900</a>
-                        <a href="./anke2/anke_10.html">アンケート901~1000</a>
+                        <a href="./anke_1.html">アンケート1~100</a>
+                        <a href="./anke_2.html">アンケート101~200</a>
+                        <a href="./anke_3.html">アンケート201~300</a>
+                        <a href="./anke_4.html">アンケート301~400</a>
+                        <a href="./anke_5.html">アンケート401~500</a>
+                        <a href="./anke_6.html">アンケート501~600</a>
+                        <a href="./anke_7.html">アンケート601~700</a>
+                        <a href="./anke_8.html">アンケート701~800</a>
+                        <a href="./anke_9.html">アンケート801~900</a>
+                        <a href="./anke_10.html">アンケート901~1000</a>
                     </ul>
                 </div>
             </div>
