--- a/anke2/anke_20_20.html
+++ b/anke2/anke_20_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)381~400<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdfl7ngNUMkKLYuIXT01R9Uwd3Ooi_0-w-guSf8MSY6eEvlCQ/viewform?embedded=true" 
