--- a/anke2/anke_14_20.html
+++ b/anke2/anke_14_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)261~280<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdQAtDanAro779deQfD4xC_xaZ5v8yLpgs7DKClAGBXjcxEIQ/viewform?embedded=true" 
