--- a/anke2/anke_15_20.html
+++ b/anke2/anke_15_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)281~300<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtA-7GDPBxL9gyL5LygN605VsXIrHp4aTwThS1xmCD025jqw/viewform?embedded=true" 
