--- a/anke2/anke_21_20.html
+++ b/anke2/anke_21_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)401~420<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOgooY7fZ4OnO8NhrUdsPn_OACS7ekQ9vbwzSYY4v3k-L8Dg/viewform?embedded=true" 
