--- a/anke2/anke_23_20.html
+++ b/anke2/anke_23_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)441~460<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScgsV2w5t1zqwn__21NE1QgIkAmw7Re_RWZdWR5TNPGm-vIqQ/viewform?embedded=true" 
