--- a/anke2/anke_26_20.html
+++ b/anke2/anke_26_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)501~520<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfy3w7blb-eLRo7aD1Q8PAVHyaWiZQOm1S31_s9UQSMV48pKg/viewform?embedded=true" 
