--- a/anke2/anke_30_20.html
+++ b/anke2/anke_30_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)581~600<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeldY0kLDFdZ7MDh0y9Ekz8QvtvEttkDexY_RnUjW4svL9bzQ/viewform?embedded=true" 
