--- a/anke2/anke_32_20.html
+++ b/anke2/anke_32_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)621~640<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSej8UNS7ZjcBa8L-tYQs98IlJHs4yltKURyi3uBuppYOEWAOQ/viewform?embedded=true" 
