--- a/anke2/anke_5_20.html
+++ b/anke2/anke_5_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)81~100<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLjhjPqsI8zmKFPfNC45rQ0lSTkz-qV4ztBguJ4N4YxD_nrw/viewform?embedded=true" 
