--- a/anke2/anke_6_20.html
+++ b/anke2/anke_6_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)101~120<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfeIsd5Bi7jH6O0arQ9CA1PnogzaK_5XaAN22JNys16Ezc1TQ/viewform?embedded=true" 
