--- a/anke2/anke_9_20.html
+++ b/anke2/anke_9_20.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)161~180<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSflIlI8vklJABWOUGqECFbNV5uASDkNHzJpw4tJ7wiQR55KVQ/viewform?embedded=true" 
