--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
                 <div class="contents">
                     <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)1~20<p>
-                    判断がつかない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrt4w5t368PXT0CbN1bE4Z3qrfLJffpyXUlpbReKQskXRpjg/viewform?embedded=true" 
